src/github.com/ebay/akutan/query/parser/testdata/insert/errors/garbage.res
parser: error parsing as legacy query: unable to parse query: line 1 column 6: expected :